refactorying db-ormlite, update dr color to match webui and andriod ui, revise genre, style and mood and update playlist